--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,4 +35,4 @@ jobs:
         env:
           GOOGLE_APPLICATION_CREDENTIALS: ${{ secrets.GCP_CREDENTIALS }}  # Set this secret in your GitHub repo
         run: |
-          python your_script.py  # Replace with the name of your Python script
+          python src/gap_vertex.py  # Replace with the name of your Python script
